TAG: seqcacheload-3-4-0-4
DATE: 11/17/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) seqdummy.csh; drop/re-create indexes based on # of records loaded

TAG: seqcacheload-3-4-0-3
DATE: 10/27/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) added seqdummy.csh, seqdummy.py

TAG: seqcacheload-BP-tr7962
DATE: 10/25/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.5 branch point tag

TAG: seqcacheload-3-4-0-2
DATE: 10/12/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.4 merge to trunk

TAG: seqcacheload-3-4-0-1
DATE: 09/21/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.4

TAG: seqcacheload-pirsfload-BP
DATE: 09/08/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) PIRSF branch point

TAG: seqcacheload-3-3-0-1
DATE: 08/23/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) OMIM branch merge

TAG: seqcacheload-omim-1
DATE: 08/09/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) OMIM

TAG: seqcacheload-BP-omim
DATE: 06/28/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) branch point for OMIM

TAG: seqcacheload-3-2-0-3
DATE: 05/20/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 6046; change algorithm per EntrezGene load

TAG: seqcacheload-3-2-0-2
DATE: 05/10/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) get rid of duplicates

TAG: seqcacheload-3-2-0-1
DATE: 05/05/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) store _CreatedBy_key, _ModifiedBy_key of user who created annotation

TAG: seqcacheload-3-1-1-1
DATE: 03/30/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 6700

TAG: seqcacheload-2-0-7
DATE: 12/07/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.1
2) TR 6118

TAG: seqcacheload-2-0-6
DATE: 12/01/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.1
2) TR 6118

TAG: seqcacheload-2-0-5
DATE: 11/23/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.1
2) TR 6118

TAG: seqcacheload-2-0-4
DATE: 10/11/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.1

TAG: seqcacheload-2-0-3
DATE: 08/26/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) Assembly/Coordinate Cache

TAG: seqcacheload-2-0-2
TAG: seqcacheload-2-0-1
TAG: seqcacheload-2-0-0
DATE: 08/24/2004
STAFF: lec
RELEASE: A
CHANGES: 